IE layout issues

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -62,6 +62,7 @@ article {
 
   main {
     display: inline-block;
+    flex: 1 1 10rem;
 
     background: #E8E8E8;
     border-radius: $module / 4;
